[build-system]
requires = ["setuptools>=61.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypixelv2.py"
version = "0.1.3"
authors = [
    {name="zium1337", email="imflo7dxepij678t7zz4@gmail.com"}
]
description = "Hypixel API Wrapper for Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.4"
]

[project.urls]
"Homepage" = "https://github.com/zium1337/hy.py"
"Bug Tracker" = "https://github.com/zium1337/hy.py/issues"
