[build-system]
requires = ["setuptools>=61.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypixelv2.py"
version = "0.3.0"
authors = [
    {name="zium1337", email="imflo7dxepij678t7zz4@gmail.com"}
]
description = "Hypixel API Wrapper for Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.4"
]

[project.urls]
"Homepage" = "https://github.com/zium1337/hy.py"
"Bug Tracker" = "https://github.com/zium1337/hy.py/issues"

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.0",
    "respx>=0.22.0"
]
